packages/ui-library/src/css/row-selector.scss
.row-selector {

    &__columns,
    &__search-row {
        @include flexbox;
    }

    &__search {
        @include flexbox-grow(1);
        margin-bottom: $spacing-lg;
        flex-basis: 50%;
        margin-right: $spacing-lg;

        &:last-child {
            margin-right: 0;
        }
    }

    &--disabled {
        @include opacity(0.4);

        .row-selector__available,
        .row-selector__added {
            pointer-events: none;

            @include user-select(none);
        }
    }

    &__category-selector {
        margin-right: $spacing-sm;
    }

    &__column-count {
        color: $color-neutral-20;
        display: inline-block;
        font-size: 15px;
        min-width: 25px - (2 * $spacing-xs);
        padding: 0 $spacing-xs;
        text-align: center;
        position: relative;
        z-index: 0;

        &:before {
            content: '';
            left: 0;
            right: 0;
            top: -4px;
            height: 24px - 2px;
            position: absolute;
            border: 1px solid $color-neutral-60;
            background: $color-white;
            z-index: -1;

            @include border-radius(7px);
        }
    }

    // needed for specifity to override inputs
    label.search,
    .input-search {
        width: 100%;
        input[type=text] {
            width: 100%;
        }
    }
    &__available,
    &__added {
        @include flexbox-grow(1);
        box-sizing: border-box;
        flex-basis: 50%;
        margin: 0 $spacing-lg 0 0;
        .items {
            border-top: 1px solid $color-rabbit-fur;
            border-bottom: 1px solid $color-rabbit-fur;
            .no-items {
                border: none;
            }
            .drag-drop-item {
                &:first-of-type {
                    .item {
                        border-top: none;
                    }
                }
            }
        }
    }
    &__column-header {
        margin-bottom: $spacing-md;
    }
    &__column-title {
        color: $color-slate;
        text-transform: uppercase;
        margin-right: $spacing-sm;
    }
    &__column-helptext {
        margin: 0 $spacing-md 0 $spacing-xs;
    }

    &--resizable {
        .items {
            max-height: none !important;
            height: 400px;
            resize: vertical;
        }
    }
    .items {
        max-height: 400px;
        overflow: auto;

        > * {
            margin-bottom: $spacing-xs;

            &:last-child {
                margin-bottom: 0;
            }
        }
    }
    .no-items {
        padding: 14px 0;
        margin-bottom: 4px;
        text-align: center;
        font-size: 14px;
        border: 1px dashed $color-rabbit-fur;
        left: 0;
        right: 0;
        z-index: 10;
        background-color: $color-white;
        min-height: 50px;

        @include box-sizing(border-box);

        &.preview {
            border: 1px dotted $color-active-blue;
        }
    }

    /* LEGACY CSS FOR DEMO ROW */
    .item {
        position: relative;
        vertical-align: middle;
        background-color: $color-white;
        border: 1px solid $color-rabbit-fur;
        color: $color-text;
        margin: 0;
        padding: 15px 5px;

        @include box-sizing(border-box);
        @include grab-cursor;
        @include border-radius(2px);

        .icon-grip {
            display: inline-block;
            margin-right: 20px;
            float: left;

            &:before {
                font-size: 16px;
                color: $color-accent-neutral-10;
            }
        }
        .item-image,
        .item-icon,
        .item-count {
            position: absolute;
        }
        &.item-decoration {
            .name {
                margin-left: 65px;
            }
        }
        .item-image {
            background-position: center;
            top: 8px;
            left: 30px;
            width: 32px;
            height: 32px;

            @include background-size(cover);
        }
        .item-icon {
            left: 30px;
            top: 13px;
            font-size: 24px;
        }
        .item-count.count {
            top: 15px;
            left: 30px;
        }
        .name {
            font-size: 18px;
            color: $color-midnight;
            margin-left: 0;
            display: block;
            overflow: hidden;
            text-overflow: ellipsis;
            width: calc(100% - 65px);

            @include transition(all 0.3s);
        }
        a.button {
            position: absolute;
            right: 0;
            top: 8px;
        }
        button {
            position: absolute;
            right: 0;
            top: 10px;
            &.inline {
                &.plus,
                &.remove {
                    padding: 0;
                    right: 5px;
                    margin-right: 0;
                    &:hover {
                        border-color: $color-rhino;
                        &:before {
                            color: $color-active-blue;
                        }
                    }
                }
            }
        }
        &.preview {
            border: 1px dotted $color-active-blue;
            height: 49px;
        }
        &.item-disabled {
            background: $color-dolphin;
            cursor: default;
        }
    }
}

.selector-row {
    @include flexbox;
    @include border-radius(2px);
    @include grab-cursor;
    align-items: center;
    padding: $spacing-sm;
    background-color: $color-white;
    border: 1px solid $color-strong-neutral-70;

    :first-child > & {
        margin-top: -1px;
    }

    &__grip,
    &__icon,
    &__image,
    &__count {
        margin-right: $spacing-md;
    }

    &__grip {
        color: $color-midnight;
        font-size: 17px;
    }

    &__icon {
        color: $color-elephant;
        font-size: 24px;
    }

    &__image {
        width: 32px;
        height: 32px;
        background-size: cover;
        background-position: center;
    }

    &__count {
        @include border-radius(12px);
        color: $color-midnight;
        border: 1px solid $color-midnight;
        min-width: 23px;
        height: 23px;
        line-height: 25px;
        text-align: center;
    }

    &__labels {
        @include flexbox-grow(1);
    }

    &__name {
        color: $color-midnight;
        font-size: 15px;
    }

    &__category {
        color: $color-elephant;
        font-size: 14px;
    }
}

.row-selector__added {
    .selector-row {
        background-color: $color-midnight;
        border-color: $color-midnight;

        &__icon,
        &__grip,
        &__name,
        &__count {
            color: $color-white;
            border-color: $color-white;
        }

        &__category {
            color: $color-neutral-80;
        }
    }
}

.selector-row--preview,
.row-selector__added
.selector-row--preview {
    border: 1px solid $color-active-blue;
    background-color: rgba($color-active-blue, 0.25);
    min-height: 30px;
}

